# Tally

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/initdb/: 01-readonly-role.sql
migrations/: 0001_initial_schema.rollback.sql  0001_initial_schema.sql  0002_users_multitenancy.rollback.sql  0002_users_multitenancy.sql  0003_receipts_jobs.rollback.sql  0003_receipts_jobs.sql  0004_pgvector_embeddings.rollback.sql  0004_pgvector_embeddings.sql  0005_sql_agent_views.rollback.sql  0005_sql_agent_views.sql  0006_readonly_grants.rollback.sql  0006_readonly_grants.sql
src/: main.py  queue.py  worker.py
src/agents/: models.py
src/agents/insights_agent/: detectors.py  graph.py
src/agents/receipt_graph/: graph.py  state.py
src/agents/receipt_graph/nodes/: categorizer.py  confidence_router.py  corrector.py  duplicate_check.py  extractor.py  human_review.py  image_encoder.py  persist.py
src/agents/sql_agent/: graph.py  sql_guard.py  tools.py
src/api/: deps.py  middleware.py
src/api/routers/: auth_routes.py  categories_routes.py  chat_routes.py  expenses_routes.py  graph_routes.py  health_routes.py  insights_routes.py  payment_methods_routes.py  receipts_routes.py  search_routes.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/db/: checkpoint_pool.py  migrate.py  pool.py  readonly.py  session.py
src/db/repositories/: analytics_repo.py  base.py  categories_repo.py  embeddings_repo.py  expenses_repo.py  jobs_repo.py  payment_methods_repo.py  receipts_repo.py  users_repo.py
src/evals/: dataset.py  evaluators.py  run_eval.py
src/mcp/: server.py
src/schemas/: auth.py  chat.py  expenses.py  jobs.py  receipts.py  search.py
src/services/: auth_service.py  chat_service.py  embedding_service.py  expense_service.py  insights_service.py  job_service.py  receipt_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth_and_tenancy.py  test_insights.py  test_jobs_lifecycle.py  test_semantic_search.py  test_sql_agent_readonly.py
tests/unit/: test_detectors.py  test_evaluators.py  test_expenses_repo.py  test_receipt_graph.py  test_security.py  test_sql_guard.py
